# COPD-Patient-Monitoring-Dashboard---Fork

./: README.md  package.json  tailwind.config.js
backend/: registry.toml
backend/agents/environment-monitor/: .env  .env_sample  coral-agent.toml  environment_monitor.py  main.py  pyproject.toml
backend/agents/personal_health_coach/: .env.example  README.md  coral-agent.toml  main.py  pyproject.toml  run_agent.sh
src/: App.tsx
src/components/AIRecommendations/: AIRecommendationsPage.tsx  ChatInterface.tsx  RecommendationCard.tsx
src/components/Alerts/: AlertBanner.tsx  AlertHistory.tsx  AlertsPage.tsx
src/components/Dashboard/: DashboardPage.tsx  EnvironmentalCard.tsx  RiskGauge.tsx  TrendChart.tsx  VitalsCard.tsx
src/components/Layout/: Layout.tsx  MobileNav.tsx  Sidebar.tsx  ThemeToggle.tsx  TopNav.tsx
src/components/Settings/: SettingsPage.tsx
src/components/SymptomLog/: SymptomHistory.tsx  SymptomLogPage.tsx  TextInput.tsx  VoiceInput.tsx
src/utils/: mockData.ts
